# zulip-terminal

./: .codecov.yml  .editorconfig  .gitignore  .gitlint  .mailmap  .travis.yml  CHANGELOG.md  MANIFEST.in  Pipfile  README.md  Vagrantfile  appveyor.yml  buttons.py  codeql-analysis.yml  config.py  core.py  display.py  happycat_size100_16color_blocksymbols.txt  happycat_size100_24color_allsymbols.txt  happycat_size100_24color_blocksymbols.txt  happycat_size100_256_blocksymbols.txt  happycat_size100_2color_blocksymbols.txt  happycat_size20_24color_allsymbols.txt  happycat_size400_16color_blocksymbols.txt  happycat_size400_24color_blocksymbols.txt  helper.py  makefile  model.py  mypy.ini  output.html  pyproject.toml  requirements.txt  run.py  sample.py  setup.cfg  setup.py  swaprc  todo_list.txt  ui.py  ui_tools.py  (+4 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 01_crash.md  02_bug.md  03_parity.md  04_platform.md  bug-report--crash-freeze-.md  bug_report.md  config.yml
.github/workflows/: cancel-previous-workflow.yml  codeql-analysis.yml  commands-action.yml  emoji-server-check-workflow.yml  lint-and-test.yml  setup-dev-env.yml
.github/zulipbot-config/: commands-action.yml
.vagrant/machines/default/virtualbox/: action_provision  action_set_name  id  index_uuid  private_key  synced_folders  vagrant_cwd
docker/: Dockerfile.alpine  Dockerfile.buster  README.md
docs/: FAQ.md  developer-add-feature-tutorial.md  developer-documentation.md  developer-feature-tutorial-ptBR.md  developer-feature-tutorial.md  developer-file-overview.md  getting-started.md  hotkeys.md  making-a-new-release.md
pip-wheel-metadata/zulip_term-0.7.0+git.dist-info/: METADATA  entry_points.txt  top_level.txt
tests/: conftest.py  test_config.py
tests/cli/: test_run.py
tests/config/: test_color.py  test_keys.py  test_themes.py
tests/core/: test_core.py
tests/emoji_data/: test_emoji_data.py
tests/emoji_names/: test_emoji_names.py
tests/helper/: test_helper.py
tests/model/: test_model.py
tests/platform_code/: test_platform_code.py
tests/scripts/: emoji_names.py
tests/server_url/: test_server_url.py
tests/ui/: test_ui.py  test_ui_tools.py  test_utils.py
tests/ui_tools/: # Code Citations.md  test_boxes.py  test_buttons.py  test_messages.py  test_popups.py  test_ui_tools.py  test_utils.py  test_views.py
tests/widget/: test_widget.py
tools/: capture_screenshot.py  check-branch  convert-emoji-names  convert-unicode-emoji-data  fetch-emoji-names  fetch-rebase-pull-request  fetch-unicode-emoji-data  font-styles-test  font-styles-test.py  generate_hotkeys.py  gitlint-extra-rules.py  lint-all  lint-docstring  lint-hotkeys  lister.py  python_tools.py  run-codespell  run-flake8  run-isort-check  run-mypy  run-spellcheck  test_chafa
zulipterminal/: api_types.py  config.py  contexts.py  core.py  emoji_names.py  helper.py  model.py  platform_code.py  server_url.py  ui.py  ui_tools.py  unicode_13.1_urwid_compatible.txt  unicode_emojis.py  urwid_types.py  version.py  widget.py
zulipterminal/cli/: # Code Citations.md  run.py
zulipterminal/config/: color.py  keys.py  markdown_examples.py  regexes.py  symbols.py  themes.py  tutorial.py  ui_mappings.py  ui_sizes.py
zulipterminal/muv/: modal.py  muv.py  palette.json  util.py
zulipterminal/muv/conf/: muv.conf  palette_without_italics.json
zulipterminal/scripts/: debug_helper.py  html2text.py  render_symbols.py
zulipterminal/themes/: THEME_CONTRIBUTING.md  colors_gruvbox.py  colors_solarized.py  dracula.py  gruvbox.py  gruvbox_dark.py  gruvbox_dark_high_contrast.py  gruvbox_dark_low_contrast.py  gruvbox_light.py  gruvbox_light_high_contrast.py  gruvbox_light_low_contrast.py  nord.py  solarized_dark.py  zt_blue.py  zt_dark.py  zt_light.py
zulipterminal/ui_tools/: boxes.py  buttons.py  messages.py  scroll.py  tables.py  utils.py  views.py
